fix: Responsive overlap removed overlapping icons in mobile view

--- a/Css/blog-styles-lucc.css
+++ b/Css/blog-styles-lucc.css
@@ -15,13 +15,28 @@
         overflow-y: auto;
         padding: 1.5rem;
     }
-
+    /* font size adjustments */
     .header {
         color: rgb(47, 123, 221);
         font-family: 'Cinzel', serif;
-        font-size: 3rem;
-        text-align: center;
+        font-size: 1.8rem;
     }
+    .midHead {
+        color: orangered;
+        font-size: x-large;
+    }
+    .content{
+        font-size: small;
+    }
+    .smallify{
+        font-size: x-small;
+    }
+    
+    .smolHead{
+        color: rgb(218, 171, 40);
+        font-weight: bold;
+    }
+    
 
     /* mini header, my details */
     .splitscreen {
@@ -50,7 +65,7 @@
     }
 
     .mini-ico {
-        max-width: 30px;
+        max-width: 15px;
         margin-left: 1rem;
     }
 
@@ -81,6 +96,9 @@
     .footer {
         border-bottom-right-radius: 1.5rem;
     }
+    .bot-icon{
+        max-width: 20px;
+    }
 }
 
 
@@ -106,6 +124,23 @@
         font-family: 'Cinzel', serif;
         font-size: 3rem;
         text-align: center;
+    }
+    .midHead {
+        color: orangered;
+        font-size: xx-large;
+    }
+    .smolHead{
+        color: rgb(218, 171, 40);
+        font-weight: bold;
+    }
+    .smallify {
+        font-size: small;
+    }
+    .content {
+        padding: 1rem;
+        font-family: 'Arima Madurai', cursive;
+        font-size: large;
+    
     }
     .splitscreen {
         display: flex;
@@ -174,24 +209,9 @@ h2 {
     text-align: center;
 }
 
-.content {
-    padding: 1rem;
-    font-family: 'Arima Madurai', cursive;
-    font-size: large;
 
-}
 
-.midHead {
-    color: orangered;
-    font-size: xx-large;
-}
-.smolHead{
-    color: rgb(218, 171, 40);
-    font-weight: bold;
-}
-.smallify {
-    font-size: small;
-}
+
 
 .catto {
     max-width: 65vw;
